[feature] : add test infrastructure